--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/bundle.js"></script>
-  </body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>NASA Astronomy Picture of the Day</title>
+<link href="scripts/styles/styles.css" rel="stylesheet"></head>
+
+<body>
+  <div class="nasa">Loading...</div>
+<script type="text/javascript" src="scripts/bundle.js"></script></body>
 </html>
